# staff

./: .gitignore  Cargo.toml  README.md  config.example.toml  pyproject.toml
crates/cli/: Cargo.toml
crates/cli/src/: llm.rs  main.rs  utils.rs
crates/core/src/: lib.rs
grimoires/: ask_zelda.md  ask_zelda_ru.md  code_feedback.md  code_master.md
src/: llm.rs  main.rs  utils.rs
tests/: cli.rs
