[workspace.package]
version = "0.1.1"            #:version
license = "Unlicense OR MIT"
edition = "2021"

# [[bin]]
# bench = false
# path = "crates/cli/src/main.rs"
# name = "staff-cli"
#
# [[test]]
# name = "integration"
# path = "crates/cli/tests/cli.rs"
#
[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
staff-core = { path = "crates/core", version = "0.1.0" }
